--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "leaners-corner",
   "version": "0.1.0",
+  "homepage": "https://mzota2.github.io/react-gh-pages",
+ 
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.8.0",
@@ -10,10 +12,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
