--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaners-corner",
   "version": "0.1.0",
-  "homepage": "https://Mzota2.github.io/react-gh-pages",
+  "homepage": "https://mzota2.github.io/react-gh-pages",
  
   "private": false,
   "dependencies": {
